[package]
name = "mvpir"
version = "0.1.0"
authors = ["Phillipp Schoppmann <schoppmann@informatik.hu-berlin.de>"]

[dependencies]
oblivc = { path = "liback-sys/oblivc-rust" }
liback-sys = { path = "liback-sys" }
[build-dependencies]
oblivc = { path = "liback-sys/oblivc-rust" }
liback-sys = { path = "liback-sys" }
